Refactor tag export handling and update .gitignore; add cspell configuration and documentation for TagExportParser